--- a/src/a_razdel_v3.pug
+++ b/src/a_razdel_v3.pug
@@ -41,6 +41,7 @@ html(lang="ru-RU")
               h2 Популярные процедуры  
           //- +card3
           +eCard
+          +eCardApp
       //- +mainProblem
       //- +sliderSwiperInMain
       //- +testBlock
