--- a/src/assets/css/__card.css
+++ b/src/assets/css/__card.css
@@ -294,8 +294,16 @@
   height: 100%;
   display: flex;
   flex-direction: column;
-  padding: 10px 10px 10px 5%;
+  padding: 10px 20px 10px 5%;
   justify-content: center;
+}
+
+.eCard__itemInnerLeft_app {
+  width: 35%;
+}
+
+.eCard__itemInnerRight_app {
+  width: 65%;
 }
 
 .eCard__itemTitle {
