--- a/src/assets/css/__eShopMenu.css
+++ b/src/assets/css/__eShopMenu.css
@@ -14,7 +14,7 @@
   list-style: none;
 }
 
-.transformOpen {
+.transformOpen::after {
   transform: rotate(180deg);
 }
 
@@ -51,7 +51,7 @@
   top: 0;
   right: 0;
   height: 100%;
-  /* width: 30px; */
+  width: 30px;
   background: transparent;
   cursor: pointer;
   display: flex;
@@ -67,6 +67,7 @@
   font-size: 10px;
   line-height: 10px;
   color: #333;
+  transition: all 0.3s;
 }
 
 .eShopMenu li.lev1 > ul {
@@ -132,7 +133,7 @@
   top: 0;
   left: 0;
   height: 100%;
-  /* width: 30px; */
+  width: 30px;
   background: transparent;
   cursor: pointer;
   transition: all 0.3s;
@@ -147,6 +148,7 @@
   font-size: 8px;
   line-height: 8px;
   color: #333;
+  transition: all 0.3s;
 }
 
 /* .eShopMenu li.lev2 > .esli_inner a:hover {
