--- a/src/__eShopMenu.pug
+++ b/src/__eShopMenu.pug
@@ -3,157 +3,249 @@ mixin eShopMenu
     ul.eShopMenu
       li.lev1
         .esli_inner
-          a.hasInner(href="") Решить проблему
+          a.hasInner(href="")
+            span Решить проблему
+            span 
           .openInner
         ul
           li.lev2
             .esli_inner
-              a.hasInner(href="") Лифтинг
+              a.hasInner(href="") 
+                span Лифтинг
+                span 
           li.lev2
             .esli_inner
-              a.hasInner(href="") Пигментация
+              a.hasInner(href="")
+                span Пигментация
+                span 
           li.lev2
             .esli_inner
-              a.hasInner(href="") Акне
+              a.hasInner(href="")
+                span Акне
+                span 
           li.lev2
             .esli_inner
-              a.hasInner(href="") Лишний вес
+              a.hasInner(href="")
+                span Лишний вес
+                span 
       li.lev1.active
         .esli_inner
-          a.hasInner(href="") Услуги
+          a.hasInner(href="")
+            span Услуги
+            span 152
           .openInner
         ul
           li.lev2.active
             .esli_inner
-              a.hasInner(href="") Аппаратная косметология 
+              a.hasInner(href="")
+                span Аппаратная косметология 
+                span 18
               .openInner
             ul
               li.lev3
                 .esli_inner
-                  a(href="") фотоомоложение
+                  a(href="")
+                    span фотоомоложение
+                    span 22
               li.lev3
                 .esli_inner
-                  a(href="") лазерная косметология
+                  a(href="")
+                    span лазерная косметология
+                    span 33
               li.lev3.active
                 .esli_inner
-                  a(href="") список всех процедур
+                  a(href="")
+                    span список всех процедур
+                    span 
           li.lev2
             .esli_inner
-              a(href="") Инъекционная косметология
+              a(href="")
+                span Инъекционная косметология
+                span 
               .openInner
             ul
               li.lev3
                 .esli_inner
-                  a(href="") Список всех методик
+                  a(href="")
+                    span Список всех методик
+                    span 
           li.lev2
             .esli_inner
-              a.hasInner(href="") Лечебная косметология 
+              a.hasInner(href="")
+                span Лечебная косметология 
+                span 
               .openInner
             ul
               li.lev3
                 .esli_inner
-                  a(href="") фототерапия в дерматологии
+                  a(href="")
+                    span фототерапия в дерматологии
+                    span 
               li.lev3
                 .esli_inner
-                  a(href="") лазеротерапия в дерматологии
+                  a(href="")
+                    span лазеротерапия в дерматологии
+                    span 
               li.lev3
                 .esli_inner
-                  a(href="") подология
+                  a(href="")
+                    span подология
+                    span 
               li.lev3
                 .esli_inner
-                  a(href="") трихология
+                  a(href="")
+                    span трихология
+                    span 
               li.lev3
                 .esli_inner
-                  a(href="") лечение храпа
+                  a(href="")
+                    span лечение храпа
+                    span 
               li.lev3
                 .esli_inner
-                  a(href="") список всех процедур
+                  a(href="")
+                    span список всех процедур
+                    span 
           li.lev2
             .esli_inner
-              a.hasInner(href="") Эстетика и уход
+              a.hasInner(href="")
+                span Эстетика и уход
+                span 
               .openInner
             ul
               li.lev3
                 .esli_inner
-                  a(href="") список всех процедур
+                  a(href="")
+                    span список всех процедур
+                    span 
           li.lev2
             .esli_inner
-              a.hasInner(href="") Имиджевая студия
+              a.hasInner(href="")
+                span Имиджевая студия
+                span 
               .openInner
             ul
               li.lev3
                 .esli_inner
-                  a(href="") визаж
+                  a(href="")
+                    span визаж
+                    span 
               li.lev3
                 .esli_inner
-                  a(href="") стрижка
+                  a(href="")
+                    span стрижка
+                    span 
               li.lev3
                 .esli_inner
-                  a(href="") окрашивание
+                  a(href="")
+                    span окрашивание
+                    span 
               li.lev3
                 .esli_inner
-                  a(href="") уход за волосами
+                  a(href="")
+                    span уход за волосами
+                    span 
               li.lev3
                 .esli_inner
-                  a(href="") укладка
+                  a(href="")
+                    span укладка
+                    span 
               li.lev3
                 .esli_inner
-                  a(href="") лечение волос (трихология)
+                  a(href="")
+                    span лечение волос (трихология)
+                    span 
               li.lev3
                 .esli_inner
-                  a(href="") brow bar
+                  a(href="")
+                    span brow bar
+                    span 
               li.lev3
                 .esli_inner
-                  a(href="") маникюр
+                  a(href="")
+                    span маникюр
+                    span 
               li.lev3
                 .esli_inner
-                  a(href="") педикюр
+                  a(href="")
+                    span педикюр
+                    span 
               li.lev3
                 .esli_inner
-                  a(href="") лечение стопы и ногтевой пластины (подология)
+                  a(href="")
+                    span лечение стопы и ногтевой пластины (подология)
+                    span 
       li.lev1
         .esli_inner
-          a(href="") Специалисты
+          a(href="")
+            span Специалисты
+            span 
       li.lev1
         .esli_inner
-          a.hasInner(href="") Оборудование
+          a.hasInner(href="")
+            span Оборудование
+            span 
           .openInner
         ul
           li.lev2
             .esli_inner
-              a(href="") LPG
+              a(href="")
+                span LPG
+                span 
           li.lev2
             .esli_inner
-              a(href="") Candela
+              a(href="")
+                span Candela
+                span 
           li.lev2
             .esli_inner
-              a(href="") Fotona
+              a(href="")
+                span Fotona
+                span 
       li.lev1
         .esli_inner
-          a(href="") Бренды
+          a(href="")
+            span Бренды
+            span 
       li.lev1
         .esli_inner
-          a.hasInner(href="") О нас
+          a.hasInner(href="")
+            span О нас
+            span 
           .openInner
         ul
           li.lev2
             .esli_inner
-              a(href="") Контакты
+              a(href="")
+                span Контакты
+                span 
           li.lev2
             .esli_inner
-              a(href="") Дополнительная информация
+              a(href="")
+                span Дополнительная информация
+                span 
           li.lev2
             .esli_inner
-              a(href="") Вакансии
+              a(href="")
+                span Вакансии
+                span 
       li.lev1
         .esli_inner
-          a(href="") Блог
+          a(href="")
+            span Блог
+            span 
       li.lev1
         .esli_inner
-          a(href="") Лицензии
+          a(href="")
+            span Лицензии
+            span 
       li.lev1
         .esli_inner
-          a(href="") Акции
+          a(href="")
+            span Акции
+            span 
       li.lev1
         .esli_inner
-          a(href="") Запись на прием
+          a(href="")
+            span Запись на прием
+            span 
