--- a/src/__eShopCatalog.pug
+++ b/src/__eShopCatalog.pug
@@ -14,3 +14,83 @@ mixin eCatalog
           .eCatalog__itemPrice
             span!= item.price 
             span ₽
+
+
+mixin brands 
+  .aShops__az
+    .aShops__azLetterBox
+      .aShops__azLetterBoxTitle A
+      .aShops__azLetterBoxContent
+        .aShops__azItemOuter
+          a.aShops__azItem(href="") Absent
+        .aShops__azItemOuter
+          a.aShops__azItem(href="") AIM
+        .aShops__azItemOuter
+          a.aShops__azItem(href="") Aimosi
+        .aShops__azItemOuter
+          a.aShops__azItem(href="") Alan Hadash
+        .aShops__azItemOuter
+          a.aShops__azItem(href="") Albana
+        .aShops__azItemOuter
+          a.aShops__azItem(href="") Alexander McQueen
+    .aShops__azLetterBox
+      .aShops__azLetterBoxTitle B
+      .aShops__azLetterBoxContent
+        .aShops__azItemOuter
+          a.aShops__azItem(href="") Alpecora
+        .aShops__azItemOuter
+          a.aShops__azItem(href="") Alpino
+        .aShops__azItemOuter
+          a.aShops__azItem(href="") AlterEgo
+        .aShops__azItemOuter
+          a.aShops__azItem(href="") Alvito
+        .aShops__azItemOuter
+          a.aShops__azItem(href="") Absent
+        .aShops__azItemOuter
+          a.aShops__azItem(href="") AIM
+        .aShops__azItemOuter
+          a.aShops__azItem(href="") Aimosi
+        .aShops__azItemOuter
+          a.aShops__azItem(href="") Alan Hadash
+        .aShops__azItemOuter
+          a.aShops__azItem(href="") Albana
+        .aShops__azItemOuter
+          a.aShops__azItem(href="") Alexander McQueen
+        .aShops__azItemOuter
+          a.aShops__azItem(href="") Absent
+        .aShops__azItemOuter
+          a.aShops__azItem(href="") AIM
+        .aShops__azItemOuter
+          a.aShops__azItem(href="") Aimosi
+        .aShops__azItemOuter
+          a.aShops__azItem(href="") Alan Hadash
+        .aShops__azItemOuter
+          a.aShops__azItem(href="") Albana
+        .aShops__azItemOuter
+          a.aShops__azItem(href="") Alexander McQueen
+    .aShops__azLetterBox
+      .aShops__azLetterBoxTitle C
+      .aShops__azLetterBoxContent
+        .aShops__azItemOuter
+          a.aShops__azItem(href="") Absent
+        .aShops__azItemOuter
+          a.aShops__azItem(href="") AIM
+        .aShops__azItemOuter
+          a.aShops__azItem(href="") Aimosi
+        .aShops__azItemOuter
+          a.aShops__azItem(href="") Alan Hadash
+        .aShops__azItemOuter
+          a.aShops__azItem(href="") Albana
+        .aShops__azItemOuter
+          a.aShops__azItem(href="") Alexander McQueen
+    .aShops__azLetterBox
+      .aShops__azLetterBoxTitle D
+      .aShops__azLetterBoxContent
+        .aShops__azItemOuter
+          a.aShops__azItem(href="") Alpecora
+        .aShops__azItemOuter
+          a.aShops__azItem(href="") Alpino
+        .aShops__azItemOuter
+          a.aShops__azItem(href="") AlterEgo
+        .aShops__azItemOuter
+          a.aShops__azItem(href="") Alvito
