--- a/src/__breadcrumbs.pug
+++ b/src/__breadcrumbs.pug
@@ -26,3 +26,9 @@ mixin breadcrumbs3
         .backBtn3 
           i.icon-leftss2
           span Назад
+
+mixin backBtnOnly 
+  .backBtn3__outer.backBtn3__outer_inLeft
+    .backBtn3 
+      i.icon-leftss2
+      span Назад
