--- a/src/assets/css/__header3_media.css
+++ b/src/assets/css/__header3_media.css
@@ -14,27 +14,39 @@
 }
 
 @media only screen and (max-width: 1024px) {
-}
-
-@media only screen and (max-width: 920px) {
+  .topLine3__menu {
+    display: none;
+  }
   .header3__menuBtn {
     display: block;
   }
   .topMenu3 {
     display: none;
   }
-  .topLine3__menu {
-    display: none;
-  }
+}
+
+@media only screen and (max-width: 920px) {
 }
 
 @media only screen and (max-width: 820px) {
 }
 
 @media only screen and (max-width: 768px) {
+  .topLine3__auth a span {
+    display: none;
+  }
 }
 
 @media only screen and (max-width: 600px) {
+  /* .header3__menuBtn {
+    order: 0;
+  }
+  .header3__logo {
+    order: 1;
+  }
+  .eShop__headerIcon {
+    order: 2;
+  } */
   .topLine3__address {
     margin: 0;
   }
@@ -51,7 +63,7 @@
   .solution3__btn {
     display: none;
   }
-  .header3__contItemInfo {
+  .header3__contItem {
     display: none;
   }
   .header3__contItem {
