--- a/src/assets/css/fonts.css
+++ b/src/assets/css/fonts.css
@@ -1,9 +1,9 @@
 @font-face {
   font-family: "icomoon";
-  src: url("../fonts/icomoon.eot?p37aya");
-  src: url("../fonts/icomoon.eot?p37aya#iefix") format("embedded-opentype"),
-    url("../fonts/icomoon.ttf?p37aya") format("truetype"), url("../fonts/icomoon.woff?p37aya") format("woff"),
-    url("../fonts/icomoon.svg?p37aya#icomoon") format("svg");
+  src: url("../fonts/icomoon.eot?hqa5u8");
+  src: url("../fonts/icomoon.eot?hqa5u8#iefix") format("embedded-opentype"),
+    url("../fonts/icomoon.ttf?hqa5u8") format("truetype"), url("../fonts/icomoon.woff?hqa5u8") format("woff"),
+    url("../fonts/icomoon.svg?hqa5u8#icomoon") format("svg");
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -25,6 +25,27 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-filter:before {
+  content: "\e939";
+}
+.icon-eshopping-cart:before {
+  content: "\e938";
+}
+.icon-eheart1:before {
+  content: "\e936";
+}
+.icon-emenu1:before {
+  content: "\e937";
+}
+.icon-eavatar:before {
+  content: "\e933";
+}
+.icon-exit:before {
+  content: "\e934";
+}
+.icon-logout1:before {
+  content: "\e935";
+}
 .icon-menu:before {
   content: "\e926";
 }
@@ -305,7 +326,7 @@
 .icon-enter:before {
   content: "\ea13";
 }
-.icon-exit:before {
+.icon-exit1:before {
   content: "\ea14";
 }
 .icon-move-up:before {
