--- a/src/__eFilter.pug
+++ b/src/__eFilter.pug
@@ -103,3 +103,21 @@ mixin eFilterPrice
 
 
 
+mixin eSortMb 
+  .eSortMb
+    .eSortMb__title
+      .eSortMb__close 
+        i.icon-close1
+    .eSortMb__content 
+      .eSortMbCheckbox
+        input(id="41" type="checkbox" data-id="" data-val="filter")
+        label(for="41") По популярности
+      .eSortMbCheckbox
+        input(id="42" type="checkbox" data-id="" data-val="filter")
+        label(for="42") По возрастанию цены
+      .eSortMbCheckbox
+        input(id="43" type="checkbox" data-id="" data-val="filter")
+        label(for="43") По убыванию цены
+      .eSortMbCheckbox
+        input(id="44" type="checkbox" data-id="" data-val="filter")
+        label(for="44") По алфавиту
