--- a/src/assets/css/__eShopCatalog_media.css
+++ b/src/assets/css/__eShopCatalog_media.css
@@ -29,9 +29,7 @@
   .eGreyLine__mbBtns {
     display: flex;
   }
-  .eSort__area {
-    display: none;
-  }
+
   .split__right_top {
     display: flex;
     justify-content: space-between;
@@ -50,6 +48,35 @@
 
   .eGreyLine__mbBtnFiltr {
     width: 200px;
+  }
+
+  .eSort__area {
+    display: none;
+  }
+
+  .eSort__area_mb {
+    display: flex;
+  }
+  .eSort__areaWrapper {
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    z-index: 2600;
+    display: none;
+  }
+
+  .eSort__areaOuter {
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background: rgba(0, 0, 0, 0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
 }
 
