--- a/src/index.pug
+++ b/src/index.pug
@@ -40,7 +40,8 @@ html(lang="ru-RU")
         .wideBox3
           .title3
               h2 Популярные процедуры  
-          +card3
+          //- +card3
+          +eCard
       //- +mainProblem
       //- +sliderSwiperInMain
       //- +testBlock
