--- a/src/assets/css/media.css
+++ b/src/assets/css/media.css
@@ -60,10 +60,10 @@
 }
 
 @media only screen and (max-width: 480px) {
-  html,
+  /* html,
   body {
     font-size: 14px;
-  }
+  } */
   .content img {
     width: 100%;
     float: none !important;
