--- a/src/eShopCatalog.pug
+++ b/src/eShopCatalog.pug
@@ -54,17 +54,21 @@ body
               span Фильтры
               i.icon-filter
           .eGreyLine
-            .eSort__area 
-              .eSort__item.eSort__title Сортировать по
-              .eSort__item
-                span По популярности
-                i.icon-arrow-up2
-              .eSort__item
-                span По цене
-                i.icon-arrow-up2
-              .eSort__item
-                span По алфавиту
-                i.icon-arrow-up2
+            .eSort__areaWrapper
+              .eSort__areaOuter
+                .eSort__area_mb
+                  +eSortMb
+              .eSort__area 
+                .eSort__item.eSort__title Сортировать по
+                .eSort__item
+                  span По популярности
+                  i.icon-arrow-up2
+                .eSort__item
+                  span По цене
+                  i.icon-arrow-up2
+                .eSort__item
+                  span По алфавиту
+                  i.icon-arrow-up2
             .searchResult__counter 
               span Найдено товаров:
               span 256
