--- a/src/__eFilter.pug
+++ b/src/__eFilter.pug
@@ -13,11 +13,11 @@ mixin eFilter1
       .eFilter__openBtn
     .eFilter__content 
       .eFilterCheckbox
-        input(id="1" type="checkbox" data-id="" data-val="filter")
-        label(for="1") Для женщин
+        input(id="1-dt" type="checkbox" data-id="" data-val="filter")
+        label(for="1-dt") Для женщин
       .eFilterCheckbox
-        input(id="2" type="checkbox" data-id="" data-val="filter")
-        label(for="2") Для мужчин
+        input(id="2-dt" type="checkbox" data-id="" data-val="filter")
+        label(for="2-dt") Для мужчин
 
 
 
@@ -28,29 +28,29 @@ mixin eFilter2
       .eFilter__openBtn
     .eFilter__content 
       .eFilterCheckbox
-        input(id="21" type="checkbox" data-id="" data-val="filter")
-        label(for="21") Волосы
+        input(id="21-dt" type="checkbox" data-id="" data-val="filter")
+        label(for="21-dt") Волосы
       .eFilterCheckbox
-        input(id="22" type="checkbox" data-id="" data-val="filter")
-        label(for="22") Глаза
+        input(id="22-dt" type="checkbox" data-id="" data-val="filter")
+        label(for="22-dt") Глаза
       .eFilterCheckbox
-        input(id="23" type="checkbox" data-id="" data-val="filter")
-        label(for="23") Губы
+        input(id="23-dt" type="checkbox" data-id="" data-val="filter")
+        label(for="23-dt") Губы
       .eFilterCheckbox
-        input(id="24" type="checkbox" data-id="" data-val="filter")
-        label(for="24") Лицо
+        input(id="24-dt" type="checkbox" data-id="" data-val="filter")
+        label(for="24-dt") Лицо
       .eFilterCheckbox
-        input(id="25" type="checkbox" data-id="" data-val="filter")
-        label(for="25") Ноги
+        input(id="25-dt" type="checkbox" data-id="" data-val="filter")
+        label(for="25-dt") Ноги
       .eFilterCheckbox
-        input(id="26" type="checkbox" data-id="" data-val="filter")
-        label(for="26") Руки
+        input(id="26-dt" type="checkbox" data-id="" data-val="filter")
+        label(for="26-dt") Руки
       .eFilterCheckbox
-        input(id="27" type="checkbox" data-id="" data-val="filter")
-        label(for="27") Тело
+        input(id="27-dt" type="checkbox" data-id="" data-val="filter")
+        label(for="27-dt") Тело
       .eFilterCheckbox
-        input(id="28" type="checkbox" data-id="" data-val="filter")
-        label(for="28") Шея
+        input(id="28-dt" type="checkbox" data-id="" data-val="filter")
+        label(for="28-dt") Шея
 
 
 mixin eFilter3
@@ -60,29 +60,29 @@ mixin eFilter3
       .eFilter__openBtn
     .eFilter__content 
       .eFilterCheckbox
-        input(id="31" type="checkbox" data-id="" data-val="filter")
-        label(for="31") Автозагар
+        input(id="31-dt" type="checkbox" data-id="" data-val="filter")
+        label(for="31-dt") Автозагар
       .eFilterCheckbox
-        input(id="32" type="checkbox" data-id="" data-val="filter")
-        label(for="32") Антиакне
+        input(id="32-dt" type="checkbox" data-id="" data-val="filter")
+        label(for="32-dt") Антиакне
       .eFilterCheckbox
-        input(id="33" type="checkbox" data-id="" data-val="filter")
-        label(for="33") Антибактериальное
+        input(id="33-dt" type="checkbox" data-id="" data-val="filter")
+        label(for="33-dt") Антибактериальное
       .eFilterCheckbox
-        input(id="34" type="checkbox" data-id="" data-val="filter")
-        label(for="34") Антивозрастное
+        input(id="34-dt" type="checkbox" data-id="" data-val="filter")
+        label(for="34-dt") Антивозрастное
       .eFilterCheckbox
-        input(id="35" type="checkbox" data-id="" data-val="filter")
-        label(for="35") Восстановление
+        input(id="35-dt" type="checkbox" data-id="" data-val="filter")
+        label(for="35-dt") Восстановление
       .eFilterCheckbox
-        input(id="36" type="checkbox" data-id="" data-val="filter")
-        label(for="36") Защита
+        input(id="36-dt" type="checkbox" data-id="" data-val="filter")
+        label(for="36-dt") Защита
       .eFilterCheckbox
-        input(id="37" type="checkbox" data-id="" data-val="filter")
-        label(for="37") Защита от солнца
+        input(id="37-dt" type="checkbox" data-id="" data-val="filter")
+        label(for="37-dt") Защита от солнца
       .eFilterCheckbox
-        input(id="38" type="checkbox" data-id="" data-val="filter")
-        label(for="38") Защта цвета
+        input(id="38-dt" type="checkbox" data-id="" data-val="filter")
+        label(for="38-dt") Защта цвета
 
 mixin eFilterPrice 
   .eFilter
