--- a/src/eShopCatalog.pug
+++ b/src/eShopCatalog.pug
@@ -8,6 +8,8 @@ include __header3
 include __menu
 include __eShopMenu
 include __eShopCatalog
+include __eFilter
+include __eFilterMobile
 include __pagination
 include __eFilter
 include __mainTop
@@ -99,6 +101,8 @@ body
 
   //- далее вывод не на главной
   +hideBox
+
+  +eFilerMobile
 
   +scripts
   
