--- a/src/assets/css/apps.css
+++ b/src/assets/css/apps.css
@@ -1,5 +1,5 @@
 /* @import url("https://fonts.googleapis.com/css?family=Roboto:300,400,400i,500,500i,600,700&display=swap&subset=cyrillic"); */
-@import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;1,400&display=swap&subset=cyrillic");
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,400&display=swap&subset=cyrillic");
 @import "../../../node_modules/sweetalert/dist/sweetalert.css";
 @import "../../../node_modules/nouislider/distribute/nouislider.css";
 
@@ -122,6 +122,12 @@
 
 @import "__eFilterMobile.css";
 @import "__eFilterMobile_media.css";
+
+@import "__eShopTovar.css";
+@import "__eShopTovar_media.css";
+
+@import "__eShopTovarSlider.css";
+@import "__eShopTovarSlider_media.css";
 
 @import "__pagination.css";
 @import "__pagination_media.css";
